# lutris-porter

./: .gitignore  README.md  lutris-porter.py  pyproject.toml
lutris_porter/: __init__.py  cli.py  db.py  errors.py  export.py  game_dir.py  importer.py  pathrewrite.py  paths.py  yaml_io.py  zstd_io.py
tests/: _helpers.py  test_cli.py  test_db.py  test_errors.py  test_export.py  test_game_dir.py  test_importer.py  test_integration.py  test_pathrewrite.py  test_paths.py  test_zstd_io.py
