[project]
name = "lutris-porter"
version = "0.1.0"
description = "Export and import Lutris games as portable compressed tarballs"
requires-python = ">=3.14"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
lutris-porter = "lutris_porter.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
