[project]
name = "lutris-porter"
version = "0.5.0"
description = "Export and import Lutris games as portable compressed tarballs"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
lutris-porter = "lutris_porter.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
